--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 
     /* typography */
     --ff-recoleta: "Recoleta", serif;
-    --ff-gordita: "Gordita", sans-serif;
+    --ff-gordita: "Arial Narrow", Arial, sans-serif;
 
     --fs-1: 6rem;
     --fs-2: 5rem;
@@ -132,6 +132,9 @@ header {
     min-height: 130vh;
 }
 
+/*-----------------------------------*\
+  #NAVBAR
+\*-----------------------------------*/
 .navbar div{
     --ease-out-transition: 0.25s ease-out;
     --ease-in-transition: 0.75s 0.1s cubic-bezier(0.25, 1, 0.75, 1);
@@ -141,13 +144,14 @@ header {
     justify-content: space-between;
     align-items: center;
     gap: 15rem;
-    margin-left: 15vw;
+    margin-left: 10vw;
+    white-space: nowrap;
   }
 
   .navbar button{
     position: relative;
     padding: 0px;
-    font-size: 1rem;
+    font-size: var(--fs-11);
     background: transparent;
     border: none;
     cursor: pointer;
