--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,30 +17,64 @@ header {
   color: #fff;
   padding: 20px 0;
   text-align: center;
+  background-image: url('../images/home-santti.jpg');
 }
 
-nav ul {
+.navbar ul{
   list-style: none;
   display: flex;
   justify-content: center;
   gap: 30px;
+  --ease-out-transition: 0.25s ease-out;
+  --ease-in-transition: 0.75s 0.1s cubic-bezier(0.25, 1, 0.75, 1);
+  align-items: center;
 }
 
-nav ul li {
-  margin: 0;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
+.navbar ul button {
+  position: relative;
+  padding: 0px;
+  font-family: Arial, sans-serif;
+  font-size: 1rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
   font-weight: bold;
-  padding: 10px 20px;
-  transition: background-color 0.3s;
+  color: white;
+  margin: 10px;
 }
 
-nav ul li a:hover {
-  background-color: #444;
-  border-radius: 5px;
+.navbar ul button > span{
+  opacity: 1;
+  transition: var(--ease-in-transition);
+}
+
+.navbar ul button::after{
+  position: absolute;
+  content: attr(data-text);
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 15px;
+  transform: translateY(35%);
+  opacity: 0;
+  transition: var(--ease-out-transition);
+}
+
+.navbar ul button:hover {
+  border-bottom: 1px solid #4F4F4F;
+}
+
+.navbar ul button:hover > span{
+  transform: translateY(35%);
+  opacity: 0;
+  transition: var(--ease-out-transition);
+}
+
+.navbar ul button:hover::after{
+  transform: translateY(0%);
+  opacity: 1;
+  transition: var(--ease-in-transition);
 }
 
 main {
