--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,114 @@
 /* Estilos globais */
-* {
+*{
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+/*-----------------------------------*\
+#CUSTOM PROPERTY
+\*-----------------------------------*/
+
+:root{
+  /* colors */
+  
+  --black: hsl(0, 0%, 0%);
+  --smokey-black: hsl(0, 0%, 7%);
+  --white_a9: hsla(0, 0%, 100%, 0.09);
+  --white_a15: hsla(0, 0%, 100%, 0.15);
+  --white: hsl(0, 0%, 100%);
+  --roxo: #8A2BE2;
+
+  /* typography */
+  --ff-recoleta: "Recoleta", serif;
+  --ff-gordita: "Gordita", sans-serif;
+
+  --fs-1: 6rem;
+  --fs-2: 5rem;
+  --fs-3: 3.8rem;
+  --fs-4: 2.8rem;
+  --fs-5: 2.6rem;
+  --fs-6: 2.2rem;
+  --fs-7: 2rem;
+  --fs-8: 1.8rem;
+  --fs-9: 1.5rem;
+  --fs-10: 1.4rem;
+  --fs-11: 1.2rem;
+  
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+
+  /**
+ * spacing
+ */
+
+--section-padding: 60px;
+
+/**
+ * shadow
+ */
+
+--shadow: 0 12px 30px -10px hsla(0, 0%, 14%, 0.1);
+
+/**
+ * border radius
+ */
+
+--radius-circle: 50%;
+--radius-5: 5px;
+--radius-25: 25px;
+
+/**
+ * transition
+ */
+
+  --transition-1: 0.25s ease;
+  --transition-2: 0.5s ease;
+  --transition-3: 1s ease;
+  --cubic-in: cubic-bezier(0.51, 0.03, 0.64, 0.28);
+  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
+}
+
+/*-----------------------------------*\
+#RESET
+\*-----------------------------------*/
+
+*,
+*::before,
+*::after {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+li { list-style: none; }
+
+a,
+img,
+span,
+button,
+ion-icon { display: block; }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img { height: auto; }
+
+button {
+background: none;
+border: none;
+font: inherit;
+cursor: pointer;
+}
+
+ion-icon { pointer-events: none; }
+
+address { font-style: normal; }
+
 
 body {
   font-family: Arial, sans-serif;
@@ -12,12 +117,50 @@ body {
   color: #333;
 }
 
+/*-----------------------------------*\
+  #LOADING
+\*-----------------------------------*/
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--white);
+  z-index: 5;
+  transform-origin: bottom;
+  transition: 0.5s var(--cubic-in);
+  transition-delay: 0.5s;
+}
+
+.loading.loaded {
+  transform: scaleY(0);
+  pointer-events: none;
+}
+
+.loading > * {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: var(--transition-2);
+}
+
+.loading.loaded > * { opacity: 0; }
+
+.loading .img { animation: rotate360 2.5s linear infinite; }
+
+@keyframes rotate360 {
+  0% { transform: translate(-50%, -50%) rotate(0); }
+  100% {transform: translate(-50%, -50%) rotate(-1turn); }
+}
+
+
 header {
   background-color: #333;
-  color: #fff;
   padding: 20px 0;
   text-align: center;
-  background-image: url('../images/home-santti.jpg');
+  /*ackground-image: url('../images/home-santti.jpg');*/
 }
 
 .navbar ul{
