--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,12 +155,18 @@ body {
   100% {transform: translate(-50%, -50%) rotate(-1turn); }
 }
 
+/*-----------------------------------*\
+  #HEADER
+\*-----------------------------------*/
 
 header {
-  background-color: #333;
-  padding: 20px 0;
+  padding: 250px 0;
   text-align: center;
-  /*ackground-image: url('../images/home-santti.jpg');*/
+  background-image: url('../images/home-santti.jpg');
+  /* background-size: cover; */
+  background-position: center; /* Centraliza a imagem */
+  z-index: -1;
+  min-height: 500px; /* Define uma altura mínima */
 }
 
 .navbar ul{
@@ -230,13 +236,16 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  position: absolute;
+  position: relative;
   width: 100%;
   bottom: 0;
 }
 
 /* Responsividade */
 @media (max-width: 768px) {
+  header {
+    background-size: cover;
+  }
   nav ul {
     flex-direction: column;
     gap: 15px;
