--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,17 @@ ion-icon { pointer-events: none; }
 
 address { font-style: normal; }
 
+/*-----------------------------------*\
+  #REMOVE SCROLLING
+\*-----------------------------------*/
+
+:focus-visible { outline-offset: 4px; }
+
+::-webkit-scrollbar { width: 5px; }
+
+::-webkit-scrollbar-track { background-color: var(--white); }
+
+::-webkit-scrollbar-thumb { background-color: var(--jet-2); }
 
 body {
   font-family: Arial, sans-serif;
@@ -120,6 +131,7 @@ body {
 /*-----------------------------------*\
   #LOADING
 \*-----------------------------------*/
+
 .loading {
   position: fixed;
   top: 0;
