--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,9 +115,9 @@ address { font-style: normal; }
 
 :focus-visible { outline-offset: 4px; }
 
-::-webkit-scrollbar { width: 5px; }
+::-webkit-scrollbar { width: 3px; }
 
-::-webkit-scrollbar-track { background-color: var(--white); }
+::-webkit-scrollbar-track { background-color: var(--black); }
 
 ::-webkit-scrollbar-thumb { background-color: var(--jet-2); }
 
