--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,8 +21,7 @@
   --roxo: #8A2BE2;
 
   /* typography */
-  --ff-recoleta: "Recoleta", serif;
-  --ff-gordita: "Gordita", sans-serif;
+  --ff-century-gothic: 'Century Gothic', sans-serif;
 
   --fs-1: 6rem;
   --fs-2: 5rem;
@@ -101,7 +100,7 @@ img { height: auto; }
 button {
 background: none;
 border: none;
-font: inherit;
+/* font: inherit; */
 cursor: pointer;
 }
 
@@ -122,7 +121,7 @@ address { font-style: normal; }
 ::-webkit-scrollbar-thumb { background-color: var(--jet-2); }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: var(--ff-century-gothic);
   line-height: 1.6;
   background-color: #f4f4f4;
   color: #333;
@@ -208,11 +207,13 @@ header {
 }
 
 .navbar ul button > span{
+  font-family: var(--ff-century-gothic);
   opacity: 1;
   transition: var(--ease-in-transition);
 }
 
 .navbar ul button::after{
+  font-family: var(--ff-century-gothic);
   position: absolute;
   content: attr(data-text);
   top: 0px;
